[package]
authors = ["Casey Primozic <me@ameo.link>"]
build = "build.rs"
name = "game-engine"
version = "0.1.0"

[build-dependencies]
protobuf-codegen-pure = "2.0.3"
config_loader = { path = "../../config_loader" }

[dependencies]
lazy_static = "1.0.2"
nalgebra = "0.16.0"
ncollide2d = { git = "https://github.com/Ameobea/ncollide.git", rev = "collision-world-public" }
noise = "0.5.1"
protobuf = "2.0.4"
physics = { path = "../../physics", default-features = false }
nphysics2d = { git = "https://github.com/Ameobea/nphysics.git" }

[dependencies.libcomposition]
default-features = false
git = "https://github.com/Ameobea/noise-asmjs.git"
rev = "noise2d"

[dependencies.uuid]
features = ["u128"]
version = "0.6.5"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
git = "https://github.com/rustwasm/wasm-bindgen.git"
rev = "57693ee11a40396bc94291354b69861dc108cffe"

[lib]
crate-type = ["cdylib"]

[profile]
[profile.dev]
lto = false
opt-level = 3

[profile.release]
lto = false
