[package]
authors = ["Casey Primozic <me@ameo.link>"]
build = "build.rs"
name = "game-engine"
version = "0.1.0"

[build-dependencies]
protobuf-codegen-pure = { git = "https://github.com/Ameobea/rust-protobuf.git", rev = "simplify-parsing" }
config_loader = { path = "../../config_loader" }

[dependencies]
lazy_static = "1.0.2"
nalgebra = "0.16.0"
ncollide2d = { git = "https://github.com/Ameobea/ncollide.git", rev = "collision-world-public" }
noise = "0.5.1"
protobuf = { git = "https://github.com/Ameobea/rust-protobuf.git", rev = "simplify-parsing" }
physics = { path = "../../physics", default-features = false }
nphysics2d = { git = "https://github.com/Ameobea/nphysics.git" }
wasm-bindgen = "0.2.28"

[dependencies.libcomposition]
default-features = false
git = "https://github.com/Ameobea/noise-asmjs.git"
rev = "noise2d"

[dependencies.uuid]
features = ["u128"]
version = "0.6.5"

[lib]
crate-type = ["cdylib"]

[profile]
[profile.dev]
lto = false
opt-level = 3

[profile.release]
lto = false
